--- a/Visual Programming Project_I.ipynb
+++ b/Visual Programming Project_I.ipynb
@@ -390,9 +390,11 @@
    "source": [
     "currentProjectLabel = \"I\"\n",
     "alphabetHand = cv2.imread('./images/static/'+currentProjectLabel+'_Hand_final.png', cv2.IMREAD_UNCHANGED)\n",
-    "passImage = cv2.imread('./images/static/Aplha_'+currentProjectLabel+'.png', cv2.IMREAD_UNCHANGED)\n",
-    "passImage = cv2.resize(passImage,(0,0),None,0.3,0.3)\n",
-    "alphabetHand = cv2.resize(alphabetHand,(0,0),None,0.3,0.3)"
+    "alphabetImage = cv2.imread('./images/static/Aplha_'+currentProjectLabel+'.png', cv2.IMREAD_UNCHANGED)\n",
+    "alphabetImage = cv2.resize(alphabetImage,(0,0),None,0.5,0.5)\n",
+    "alphabetHand = cv2.resize(alphabetHand,(0,0),None,0.5,0.5)\n",
+    "passImage = cv2.imread('./images/static/checked.png', cv2.IMREAD_UNCHANGED)\n",
+    "passImage = cv2.resize(alphabetHand,(0,0),None,0.3,0.3)"
    ]
   },
   {
@@ -403,18 +405,22 @@
    "source": [
     "def DetectionAlpha(currentProjectLabel,videoRecorderIndex,windowpositionX,windowpositionY):\n",
     "    con = sqlite3.connect('celemony.db')\n",
-    "    processName = \"p\"+str((videoRecorderIndex+1))+\"ByPass\"\n",
+    "    cur = con.cursor()\n",
+    "    processName_ByPass = \"p\"+str((videoRecorderIndex+1))+\"ByPass\"\n",
+    "    processName_Status = \"p\"+str((videoRecorderIndex+1))+\"Status\"\n",
+    "    cur.execute(\"update config set amount=1 where title='\"+processName_Status+\"'\")\n",
+    "    con.commit()\n",
     "    cap = cv2.VideoCapture(videoRecorderIndex)\n",
     "    success,img = cap.read()\n",
     "    isStartCheck = False\n",
     "    enableByPass = False\n",
     "    byPass = False\n",
-    "    global alphabetHand,passImage\n",
+    "    global alphabetHand,alphabetImage,passImage\n",
     "    global isSuccess\n",
     "    checkedImg = passImage\n",
     "    overlay = alphabetHand\n",
     "    hf,wh,cf = overlay.shape\n",
-    "    hc,wc,cc = checkedImg.shape\n",
+    "    hc,wc,cc = alphabetImage.shape\n",
     "    captureImg = img\n",
     "    prepareWin = \"Hand Tracking - \"+currentProjectLabel\n",
     "    displayResultWindowName = \"Display Result - \"+currentProjectLabel\n",
@@ -430,13 +436,13 @@
     "        DELAY_SECONDS = 1\n",
     "        t1 = time.time()\n",
     "        while cap.isOpened():\n",
-    "            cur = con.cursor()\n",
-    "            cur.execute(\"select * from config where title='\"+processName+\"'\")\n",
+    "            cur.execute(\"select * from config where title='\"+processName_ByPass+\"'\")\n",
     "            data = cur.fetchall()\n",
-    "            if data[0][1] == 1:\n",
-    "                byPass = True\n",
-    "            else:\n",
-    "                byPass = False\n",
+    "            if len(data) > 0:\n",
+    "                if data[0][1] == 1:\n",
+    "                    byPass = True\n",
+    "                else:\n",
+    "                    byPass = False\n",
     "            success, image = cap.read()\n",
     "            # resize image\n",
     "            image = rescale_frame(image)\n",
@@ -462,7 +468,7 @@
     "            # Draw Alphabet and Hand\n",
     "#             __draw_label(image, currentProjectLabel, (wb-100,150), (255,255,255))\n",
     "            image = cvzone.overlayPNG(image,overlay,[0,0])\n",
-    "\n",
+    "            image = cvzone.overlayPNG(image,alphabetImage,[wb-hc,0])\n",
     "            # Get status box\n",
     "            cv2.rectangle(image, (0,hb-80), (200, hb), (245, 90, 16), -1)\n",
     "    #         cv2.putText(image, DisplayCheckAlpha(), (20,25), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
@@ -516,11 +522,14 @@
     "                                isComplete = True\n",
     "                                # __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
     "                                captureImg = cvzone.overlayPNG(captureImg,checkedImg,[int(wb/2)-50,hb-hc-20])\n",
+    "                                #captureImg = cvzone.overlayPNG(captureImg,checkedImg,[0,0])\n",
     "\n",
     "                                cv2.imshow(displayResultWindowName, captureImg)\n",
     "                                # Move window to position\n",
     "                                cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
     "                                isSuccess = True\n",
+    "                                cur.execute(\"update config set amount=2 where title='\"+processName_Status+\"'\")\n",
+    "                                con.commit()\n",
     "                        #Reset when not same\n",
     "                        if(isSameAlpha == False and isStartCheck == True):\n",
     "                            t1 = time.time()\n",
@@ -561,7 +570,9 @@
     "                            cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
     "                            isSuccess = True\n",
     "                            byPass = False\n",
-    "                            cur.execute(\"update config set amount=0 where title='\"+processName+\"'\")\n",
+    "                            cur.execute(\"update config set amount=0 where title='\"+processName_ByPass+\"'\")\n",
+    "                            con.commit()\n",
+    "                            cur.execute(\"update config set amount=2 where title='\"+processName_Status+\"'\")\n",
     "                            con.commit()\n",
     "            try:\n",
     "                cv2.imshow(prepareWin, image)\n",
@@ -569,6 +580,14 @@
     "                cv2.moveWindow(prepareWin,windowpositionX,windowpositionY)\n",
     "            except:\n",
     "                print(\"Error on Creating Capture\")\n",
+    "            # Check Reset\n",
+    "            cur.execute(\"select * from config where title='\"+processName_Status+\"'\")\n",
+    "            data = cur.fetchall()\n",
+    "            if len(data) > 0:\n",
+    "                if data[0][1] == -1:\n",
+    "                    cv2.destroyWindow(displayResultWindowName)\n",
+    "                    isSuccess = False\n",
+    "                    print(displayResultWindowName + \" is closed\")\n",
     "            key = cv2.waitKey(5)\n",
     "            if key & 0xFF == ord(currentProjectLabel.lower()):\n",
     "                try:\n",
@@ -580,12 +599,14 @@
     "            # when closed result\n",
     "            if(cv2.getWindowProperty(prepareWin,cv2.WND_PROP_VISIBLE)==1 and cv2.getWindowProperty(displayResultWindowName,cv2.WND_PROP_VISIBLE)==0):\n",
     "                isSuccess = False\n",
+    "                cur.execute(\"update config set amount=1 where title='\"+processName_Status+\"'\")\n",
+    "                con.commit()\n",
     "            # wait multiple key\n",
     "            pressedKey = cv2.waitKey(5) & 0xFF\n",
     "            if pressedKey == ord(str(videoRecorderIndex+1)):\n",
     "                if enableByPass == True:\n",
     "                    byPass = True\n",
-    "                    cur.execute(\"update config set amount=1 where title='\"+processName+\"'\")\n",
+    "                    cur.execute(\"update config set amount=1 where title='\"+processName_ByPass+\"'\")\n",
     "                    con.commit()\n",
     "                    print('Bypass was running')\n",
     "                else:\n",
@@ -598,6 +619,8 @@
     "                break\n",
     "    cap.release()\n",
     "    cv2.destroyAllWindows()\n",
+    "    cur.execute(\"update config set amount=0 where title='\"+processName_Status+\"'\")\n",
+    "    con.commit()\n",
     "    con.close()"
    ]
   },
