--- a/Control Center.ipynb
+++ b/Control Center.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7ed3c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +13,56 @@
     "# check all\n",
     "data = cur.fetchall()\n",
     "print(data)\n",
-    "con.close()"
+    "con.close()\n",
+    "# p1ByPass = 1 is Enable\n",
+    "# p1ByPass = 0 is Disable\n",
+    "# p1Status = 1 is Running\n",
+    "# p1Status = 0 is Stop\n",
+    "# p1Status = -1 is Reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('celemony.db')\n",
+    "cur = con.cursor()\n",
+    "cur.execute('''CREATE TABLE IF NOT EXISTS config\n",
+    "               (title text, amount INTEGER)''')\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p1ByPass\"})\n",
+    "# check p1ByPass\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    print('init p1ByPass')\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p1ByPass\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p1Status\"})\n",
+    "# check p1Status\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p1Status\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "    print('init p1Status')\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p2ByPass\"})\n",
+    "# check p1ByPass\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p2ByPass\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "    print('init p2ByPass')\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p2Status\"})\n",
+    "# check p2Status\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p2Status\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "    print('init p2Status')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "810e97e3",
    "metadata": {},
    "source": [
     "### Update P1ByPass -> Enable"
@@ -28,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "927acfcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,29 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd73b37",
-   "metadata": {},
-   "source": [
-    "### Update P1ByPass -> Disable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0a1c155",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "con = sqlite3.connect('celemony.db')\n",
-    "cur = con.cursor()\n",
-    "cur.execute(\"update config set amount=0 where title='p1ByPass'\")\n",
-    "con.commit()\n",
-    "con.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a47019cb",
    "metadata": {},
    "source": [
     "### Update P2ByPass -> Enable"
@@ -72,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2b3204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +103,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332709d5",
+   "metadata": {},
+   "source": [
+    "### Update P1ByPass -> Disable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('celemony.db')\n",
+    "cur = con.cursor()\n",
+    "cur.execute(\"update config set amount=0 where title='p1ByPass'\")\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Update P2ByPass -> Disable"
@@ -94,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e34a6eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +140,51 @@
     "con.commit()\n",
     "con.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update P1 -> Reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('celemony.db')\n",
+    "cur = con.cursor()\n",
+    "cur.execute(\"update config set amount=-1 where title='p1Status'\")\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update P2 -> Reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('celemony.db')\n",
+    "cur = con.cursor()\n",
+    "cur.execute(\"update config set amount=-1 where title='p2Status'\")\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
