--- a/Control Center.ipynb
+++ b/Control Center.ipynb
@@ -2,13 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('p1ByPass', 0), ('p2ByPass', 0), ('p1Status', 0), ('p2Status', 0)]\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
+    "import cv2\n",
     "con = sqlite3.connect('celemony.db')\n",
     "cur = con.cursor()\n",
+    "if(cv2.getWindowProperty(\"Hand Tracking - A\",cv2.WND_PROP_VISIBLE)==0 and cv2.getWindowProperty(\"Display Result - A\",cv2.WND_PROP_VISIBLE)==0):\n",
+    "    cur.execute(\"update config set amount=0 where title='p1Status'\")\n",
+    "    con.commit()\n",
+    "if(cv2.getWindowProperty(\"Hand Tracking - I\",cv2.WND_PROP_VISIBLE)==0 and cv2.getWindowProperty(\"Display Result - I\",cv2.WND_PROP_VISIBLE)==0):\n",
+    "    cur.execute(\"update config set amount=0 where title='p2Status'\")\n",
+    "    con.commit()\n",
     "cur.execute(\"select * from config\")\n",
     "# check all\n",
     "data = cur.fetchall()\n",
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +195,13 @@
     "con.commit()\n",
     "con.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
